Add function to compare choices. Stage new function scoreboard() to determine brains to display.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </div>
     
     <div class="brain-container">
-        <img id="life-0" src="./imgs/scoreboard/brain.sad.png">
-        <img id="life-1" src="./imgs/scoreboard/brain.sick.png">
-        <img id="life-2" src="./imgs/scoreboard/brain.frustrated.png">
-        <img id="life-3" src="./imgs/scoreboard/brain.dizzy.png">
-        <img id="life-4" src="./imgs/scoreboard/brain.hearteyes.png">>
+        <img class="brains" id="life-0" src="./imgs/scoreboard/brain.sad.png">
+        <img class="brains" id="life-1" src="./imgs/scoreboard/brain.sick.png">
+        <img class="brains" id="life-2" src="./imgs/scoreboard/brain.frustrated.png">
+        <img class="brains" id="life-3" src="./imgs/scoreboard/brain.dizzy.png">
+        <img class="brains" id="life-4" src="./imgs/scoreboard/brain.hearteyes.png">
      </div>
     
     </div>
