MVP! Update all card icons per level. Update life(brain) meter. Create game over screen.

--- a/index.html
+++ b/index.html
@@ -10,54 +10,71 @@
 
 
 <body>
-     <div class="gameboard-container">
+<div class="gameboard-container">
+    
+    <div class="card-container">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+        <img src="./imgs/cards/square.png" class="game-squares">
+   </div>
+       
+   <div class="gameover-container"> 
+   <img class="gameover-image" src="./imgs/gameover.png" width="350vh" height="150vh" justify="cetner">
+   <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
+   </div>
 
-       <div class="card-container">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-         <img src="./imgs/cards/square.png" class="game-squares">
-        </div>
+   <div class="play-again-container"> 
+   <div class="play-again"><button class="play-again-button" id="play-again">Play Again?</button></div>
+   </div>
 
-        <div class="gameover-container"></div>
 
-        <div class="play-again"><button id="play-again">Play Again!</button></div>
+   <div class="brain-container">
+       <img class="brains0" src="./imgs/scoreboard/brain.sick.png">
+       <img class="brains1" src="./imgs/scoreboard/brain.frustrated.png">
+       <img class="brains2" src="./imgs/scoreboard/brain.dizzy.png">
+       <img class="brains3" src="./imgs/scoreboard/brain.hearteyes.png">
+       <img class="brains4" src="./imgs/scoreboard/brain.superhero.png">
+   </div>
 
-        <div class="brain-container">
-            <img class="brains0" src="./imgs/scoreboard/brain.sad.png">
-            <img class="brains1" src="./imgs/scoreboard/brain.sick.png">
-            <img class="brains2" src="./imgs/scoreboard/brain.frustrated.png">
-            <img class="brains3" src="./imgs/scoreboard/brain.dizzy.png">
-            <img class="brains4" src="./imgs/scoreboard/brain.hearteyes.png">
-        </div>
+</div>
 
+
+
+
+    <div class="button-container"> 
+        <div class="level-select"></div>
+            <div class="easy level"><button class="lvlSelect" id="easy">easy</button></div>
+            <div class="medium level"><button class="lvlSelect" id="medium">medium</button></div>
+            <div class="hard level"><button class="lvlSelect" id="hard">hard</button></div>
     </div>
+
 
 
 
