Finalize game over screen. Confirm play again cycle is working.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    </div>
        
    <div class="gameover-container"> 
-   <img class="gameover-image" src="./imgs/gameover.png" width="350vh" height="150vh" justify="cetner">
+   <img class="gameover-image" src="./imgs/gameover.png" width="400vh" height="150vh" justify="center">
    <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
    </div>
 
