--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
    </div>
        
    <div class="gameover-container"> 
-   <img class="gameover-image" src="./imgs/gameover.png" width="400vh" height="150vh" justify="center">
-   <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
-   </div>
+</div>
 
-   <div class="play-again-container"> 
-   <div class="play-again"><button class="play-again-button" id="play-again">Play Again?</button></div>
-   </div>
+<div class="play-again-container"> 
+    <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
+    <img class="gameover-image" src="./imgs/gameover.png" justify="center">
+    <div class="play-again"><button class="play-again-button" id="play-again">Play Again?</button></div>
+</div>
 
    <div class="brain-container">
        <img class="brains0" src="./imgs/scoreboard/brain.sick.png">
