--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BrainFlex</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./JS/main.js" defer></script>
+    <script src="./js/main.js" defer></script>
 </head>
 
 
@@ -45,15 +45,12 @@
         <img src="./imgs/cards/square.png" class="game-squares">
         <img src="./imgs/cards/square.png" class="game-squares">
    </div>
-       
-   <div class="gameover-container"> 
-</div>
 
-<div class="play-again-container"> 
-    <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
-    <img class="gameover-image" src="./imgs/gameover.png" justify="center">
-    <div class="play-again"><button class="play-again-button" id="play-again">Play Again?</button></div>
-</div>
+    <div class="play-again-container"> 
+        <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
+        <img class="gameover-image" src="./imgs/gameover.png" justify="center">
+        <div class="play-again"><button class="play-again-button" id="play-again">Play Again?</button></div>
+    </div>
 
    <div class="brain-container">
        <img class="brains0" src="./imgs/scoreboard/brain.sick.png">
@@ -63,18 +60,15 @@
        <img class="brains4" src="./imgs/scoreboard/brain.superhero.png">
    </div>
 
-
 </div>
 
 
-
-
 <div class="button-container"> 
-        <div class="level-select"></div>
-            <div class="easy level"><button class="lvlSelect" id="easy">easy</button></div>
-            <div class="medium level"><button class="lvlSelect" id="medium">medium</button></div>
-            <div class="hard level"><button class="lvlSelect" id="hard">hard</button></div>
-    </div>
+    <div class="level-select"></div>
+    <div class="easy level"><button class="lvlSelect" id="easy">easy</button></div>
+    <div class="medium level"><button class="lvlSelect" id="medium">medium</button></div>
+    <div class="hard level"><button class="lvlSelect" id="hard">hard</button></div>
+</div>
 
 
 
