Refactor all files, confirm formattin across all.

--- a/index.html
+++ b/index.html
@@ -1,74 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>BrainFlex</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="./js/main.js" defer></script>
+    <link rel='stylesheet' href='style.css'>
+    <script src='./js/main.js' defer></script>
 </head>
 
 
 <body>
 
-<div class="gameboard-container">
+<div class='gameboard-container'>
 
-    <div class="card-container">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
-        <img src="./imgs/cards/square.png" class="game-squares">
+    <div class='card-container'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
+        <img src='./imgs/cards/square.png' class='game-squares'>
    </div>
 
-    <div class="play-again-container"> 
-        <img class ="sad-heart" src="./imgs/scoreboard/brain.sad.png">
-        <img class="gameover-image" src="./imgs/gameover.png" justify="center">
-        <div class="play-again"><button class="play-again-button" id="play-again">Play Again?</button></div>
+    <div class='play-again-container'> 
+        <img class ='sad-heart' src='./imgs/scoreboard/brain.sad.png'>
+        <img class='gameover-image' src='./imgs/gameover.png' justify='center'>
+        <div class='play-again'><button class='play-again-button' id='play-again'>Play Again?</button></div>
     </div>
 
-   <div class="brain-container">
-       <img class="brains0" src="./imgs/scoreboard/brain.sick.png">
-       <img class="brains1" src="./imgs/scoreboard/brain.frustrated.png">
-       <img class="brains2" src="./imgs/scoreboard/brain.dizzy.png">
-       <img class="brains3" src="./imgs/scoreboard/brain.hearteyes.png">
-       <img class="brains4" src="./imgs/scoreboard/brain.superhero.png">
+   <div class='brain-container'>
+       <img class='brains0' src='./imgs/scoreboard/brain.sick.png'>
+       <img class='brains1' src='./imgs/scoreboard/brain.frustrated.png'>
+       <img class='brains2' src='./imgs/scoreboard/brain.dizzy.png'>
+       <img class='brains3' src='./imgs/scoreboard/brain.hearteyes.png'>
+       <img class='brains4' src='./imgs/scoreboard/brain.superhero.png'>
+   </div>
+
+   <div class='button-container'> 
+       <div class='level-select'></div>
+       <div class='easy level'><button class='lvlSelect' id='easy'>easy</button></div>
+       <div class='medium level'><button class='lvlSelect' id='medium'>medium</button></div>
+       <div class='hard level'><button class='lvlSelect' id='hard'>hard</button></div>
    </div>
 
 </div>
 
 
-<div class="button-container"> 
-    <div class="level-select"></div>
-    <div class="easy level"><button class="lvlSelect" id="easy">easy</button></div>
-    <div class="medium level"><button class="lvlSelect" id="medium">medium</button></div>
-    <div class="hard level"><button class="lvlSelect" id="hard">hard</button></div>
-</div>
 
 
 
